# doolhof-triangel

./: CMakeLists.txt  Makefile
src/: main.cpp  maze.cpp  maze.h  numeric.h  point.cpp  point.h  triangle.cpp  triangle.h  wall.cpp  wall.h
